--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,10 +21,10 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
       with:
-        path: bin/Release/net6.0/BenningSharp.dll
+        path: BenningSharp/bin/Release/net6.0/BenningSharp.dll
     - name: Publish BenningSharp
       uses: brandedoutcast/publish-nuget@v2.5.2
       with:
-          PROJECT_FILE_PATH: BenningSharp.csproj
+          PROJECT_FILE_PATH: BenningSharp/BenningSharp.csproj
           NUGET_KEY: ${{secrets.NUGET_KEY}}
           PACKAGE_NAME: BenningSharp
