--- a/BenningSharp/BenningSharp.csproj
+++ b/BenningSharp/BenningSharp.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 	
 	<ItemGroup>
-		<None Update="README.md">
+		<None Include="..\README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
