--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,22 +9,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4.2.2
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v4.2.0
       with:
-          dotnet-version: '6.0.x'
+        dotnet-version: | 
+          8.0
+          9.0
     - name: Install dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3.1.1
+      uses: actions/upload-artifact@v4.6.0
       with:
-        path: BenningSharp/bin/Release/net6.0/BenningSharp.dll
-    - name: Publish BenningSharp
-      uses: brandedoutcast/publish-nuget@v2.5.2
-      with:
-          PROJECT_FILE_PATH: BenningSharp/BenningSharp.csproj
-          NUGET_KEY: ${{secrets.NUGET_KEY}}
-          PACKAGE_NAME: BenningSharp
+        path: BenningSharp/bin/Release/**/BenningSharp.dll
+    - name: Upload to Nuget.org
+      run: dotnet nuget push BenningSharp/bin/Release/BenningSharp.*.nupkg --api-key ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json
